--- a/public/css/media.css
+++ b/public/css/media.css
@@ -1,3 +1,186 @@
+@media screen and (min-width: 1440px) {
+    /*navbar*/
+     nav{
+         background-color: black;
+         display: flex; /* mettre en ligne les éléments de la navbar*/
+         justify-content: space-between;
+     }
+ 
+     .menu{
+         display: flex; /* mettre en ligne les elements de la partie droite de la navbar*/
+         color: white;
+     }
+ 
+     .menu > div > img {
+         height: 40px;
+         margin-top: 5px;
+     }
+ 
+     .menu > div {
+         margin: 8px; /*crée de l'espacement autour de cahque div*/
+         font-size: 10px;
+         text-align: center; /* permet d'aligner le text par rapport a sa div*/
+     }
+ 
+     .logo > img {
+         height: 40px;
+         margin-top: 25px;
+         margin-left: 15px;
+     } 
+ 
+     /*section packages*/
+ 
+     .packages{
+         display: flex;
+         justify-content: space-around;
+         background-color: rgb(51, 77, 92);
+         height: 200px;
+     }
+ 
+     #logo-packages{
+         width: 30%;
+     }
+ 
+     #logo-packages>img{
+         height: 150px;
+         margin: 30px 25%;
+     }
+ 
+     #text-packages{
+         width: 50%;
+         color: white;
+         padding-top: 0px;
+         padding-left: 28px;
+     }
+ 
+     #text-packages > .up{
+         font-size: 35px;
+         margin-bottom: 0;
+     }
+ 
+     #text-packages > .down{
+         font-size: 20px;
+         margin-top: 10px;
+     }
+ 
+     /* section eclosion, evolution et envol */
+     .title-eclosion{
+         font-size: 20px;
+         color: white;
+         width: 100%;
+         text-align: center;
+     }
+ 
+     .title-eclosion>h1{
+         background-color: rgb(51, 77, 92);
+         padding: 10px 0px;
+         margin: 20px auto;
+         width: 30%;
+     }
+ 
+     .div-eclosion{
+         display: flex;
+     }
+ 
+     #eclosion{
+         width: 30%;
+     }
+ 
+     #eclosion >img{
+         height: 150px;
+         margin: 30px 50px;
+     }
+ 
+     #text-eclosion{
+         width: 100%;
+         padding: 10px 90px;
+         font-size: 15px;
+     }
+ 
+     /* section logo eclosion, evolution, envol */
+ 
+     .dispo-logo{
+         display: flex;
+         justify-content: space-around;
+         background-color: #eae3d6;
+     }
+ 
+     .pad{
+         padding: 20px 70px;
+     }
+ 
+     .dispo-logo>div{
+         font-size: 12px;
+         text-align: center;
+         font-weight: bold; 
+     }
+ 
+     .dispo-logo>div>img{
+         width: 60px;
+         margin: 5px 5px;
+     }
+ 
+     .dispo-logo-exception{
+         display: flex;
+         justify-content: space-around;
+         background-color: #eae3d6;
+         padding: 0px 90px;
+     }
+     
+     .padEvo{
+         padding: 20px 90px 0px;
+     }
+     
+     .dispo-logo-exception>div{
+         font-size: 12px;
+         text-align: center;
+         font-weight: bold; 
+     }
+     
+     .dispo-logo-exception>div>img{
+         padding: 0px 90px 0px;
+         width: 60px;
+     }
+ 
+     /* section footer */
+     .div-footer{
+         display: flex;
+         justify-content: space-around;
+         background-color: #393a3b;
+         color: white;
+         font-weight: bolder;
+         font-size: 15px;
+     }
+ 
+     .div-footer>div>p{
+         margin-left: 13px;
+         margin-top: 40px;
+         margin-bottom: 30px;
+     }
+ 
+     .div-footer>div>img{
+         width: 50px;
+         margin: 6px;
+     }
+ 
+     .cond{
+         width: 100%;
+         text-align: end;
+         background-color: #393a3b;
+         color: white;
+         font-weight: bolder;
+         padding-bottom: 40px;
+     }
+ 
+     .cond>p{
+         font-size: 15px;
+         margin: 0;
+         margin-right: 15px;
+         padding-top: 15px;
+     }
+ 
+ }
+
 @media screen and (min-width: 1024px) and (max-width: 1439px) {
    /*navbar*/
     nav{
@@ -567,6 +750,200 @@
 }
 
 @media screen and (min-width: 375px) and (max-width: 424px) {
+    body{
+        width: 100%;
+        margin: 0; /*création des marges du body */
+        font-family: 'Ubuntu', sans-serif;
+        box-shadow: 0px 0px 35px 1px rgb(172, 172, 172);
+        margin-top: -20px;
+    }
+    /*navbar*/
+    nav{
+        background-color: black;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu{
+        display: flex; /* mettre en ligne les elements de la partie droite de la navbar*/
+        color: white;
+        order: 10;
+    }
+
+    .menu > div > img {
+        height: 35px;
+    }
+
+    .menu > div {
+        margin: 8px; /*crée de l'espacement autour de cahque div*/
+        font-size: 10px;
+        text-align: center; /* permet d'aligner le text par rapport a sa div*/
+    }
+
+    .logo > img {
+        height: 50px;
+        margin-right: 30px;
+        align-items: center;
+    } 
+
+    .menu {
+        align-items: center;
+        text-align: center;
+    }
+    /*section packages*/
+
+    .packages{
+        display: flex;
+        justify-content: space-around;
+        background-color: rgb(51, 77, 92);
+        height: 150px;
+    }
+
+    #logo-packages{
+        width: 30%;
+    }
+
+    #logo-packages>img{
+        height: 100px;
+        margin: 30px 25%;
+    }
+
+    #text-packages{
+        width: 55%;
+        color: white;
+        margin: auto;
+        margin-top: -5px;
+    }
+
+    #text-packages > .up{
+        font-size: 20px;
+        margin-bottom: 0;
+    }
+
+    #text-packages > .down{
+        font-size: 15px;
+        margin-top: 10px;
+    }
+
+    /* section eclosion, evolution et envol */
+    .title-eclosion{
+        font-size: 15px;
+        color: white;
+        width: 100%;
+        text-align: center;
+    }
+
+    .title-eclosion>h1{
+        background-color: rgb(51, 77, 92);
+        padding: 10px 0px;
+        margin: 15px auto;
+        width: 30%;
+    }
+
+    .div-eclosion{
+        display: flex;
+    }
+
+    #eclosion{
+        width: 30%;
+    }
+
+    #eclosion >img{
+        height: 100px;
+        margin: 40px 10px;
+    }
+
+    #text-eclosion{
+        width: 100%;
+        padding: 10px;
+        font-size: 12px;
+    }
+
+    /* section logo eclosion, evolution, envol */
+
+    .dispo-logo{
+        display: flex;
+        justify-content: space-around;
+        background-color: #eae3d6;
+    }
+
+    .pad{
+        padding: 20px;
+    }
+
+    .dispo-logo>div{
+        font-size: 11px;
+        text-align: center;
+        font-weight: bold; 
+    }
+
+    .dispo-logo>div>img{
+        width: 60px;
+        margin: 5px 5px;
+    }
+
+    .dispo-logo-exception{
+        display: flex;
+        justify-content: space-around;
+        background-color: #eae3d6;
+        padding: 0px 90px;
+    }
+    
+    .padEvo{
+        padding: 20px 0px;
+        padding-bottom: 5px;
+    }
+    
+    .dispo-logo-exception>div{
+        font-size: 11px;
+        text-align: center;
+        font-weight: bold; 
+    }
+    
+    .dispo-logo-exception>div>img{
+        padding: 0px 90px 0px;
+        width: 60px;
+    }
+
+    /* section footer */
+    .div-footer{
+        display: flex;
+        justify-content: space-around;
+        background-color: #393a3b;
+        color: white;
+        font-weight: bolder;
+        font-size: 12px;
+    }
+
+    .div-footer>div>p{
+        margin-left: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .div-footer>div>img{
+        width: 30px;
+        margin: 2px;
+    }
+
+    .cond{
+        width: 100%;
+        text-align: end;
+        background-color: #393a3b;
+        color: white;
+        font-weight: bolder;
+        padding-bottom: 10px;
+    }
+
+    .cond>p{
+        font-size: 12px;
+        margin-right: 15px;
+        padding-top: 15px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 374px) {
     body{
         width: 100%;
         margin: 0; /*création des marges du body */
